link style and script js

--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HugChat</title>
+    <style src="../static/style.css"></style>
 </head>
 <body>
     <h1>HugChat</h1>
@@ -20,5 +21,6 @@
 		{% endif %}
         {% endfor %}
     </div>
+    <Script src="../static/script.js"> </Script>
 </body>
 </html>
